[package]
name = "expression-closed01"
version = "0.2.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]

license = "MIT"
repository = "https://github.com/mneumann/expression-closed01-rs"
description = "Expression terms in the closed [0,1] interval"
keywords = ["expression", "term", "numeric"]

[dependencies]
asexp = "0.2.0"
expression = "0.3.0"
closed01 = "0.3.0"
